# par-lang

./: 404.html  Cargo.toml  LICENSE  OLD_README.md  README.md  appendix.html  expressions.html  future.html  glossary.html  index.html  introduction.html  items.html  lexical.html  notation.html  patterns.html  print.html  searchindex.js  searchindex.json  source-files.html  statements.html  toc.html  toc.js  types.html
.github/: FUNDING.yml
.github/workflows/: deploy-docs.yml
docs/: book.toml
docs/par-theme/: highlight.js
docs/src/: SUMMARY.md  appendix.md  expressions.md  future.md  introduction.md  ir.md  items.md  lexical.md  linearity.md  notation.md  patterns.md  source-files.md  statements.md  types.md
examples/: bubble_sort.par  fibonacci.par  filter.par  flatten.par  rock-paper-scissors.par  rock_paper_scissors.par  sample.par  sample_fibonacci.par  sample_ic.par  sample_types.par  semigroup_queue.par
expressions/: application.html  construction.html
src/: base.rs  interact.rs  language.rs  language_server.rs  location.rs  main.rs  notation.rs  par.pest  par.rs  par_core.pest  parse.rs  parse_core.rs  playground.rs  print.rs  process.rs  readback.rs  runtime.rs  sample.par  sample_fibonacci.par  sample_ic.par  sample_types.par  spawn.rs  tests.rs
src/icombs/: compiler.rs  equivalence.rs  mod.rs  net.rs  parse.rs  readback.rs  syntax.pest
src/language_server/: data.rs  feedback.rs  instance.rs  io.rs  language_server_main.rs  messages.rs  playground_run.rs  protocol.rs  server.rs
src/par/: ast.rs  language.rs  (+9 more)
statements/: commands.html
(+7 files in other folders)
