[package]
name = "par-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7.14"
pest_derive = "2.7.14"
eframe = { version = "0.31", features = ["default", "__screenshot"] }
egui_code_editor = "0.2.12"
indexmap = "2.7.0"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
stacker = "0.1.19"
