[package]
name = "par-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
pest_derive = "2.7.14"
eframe = { version = "0.31", features = ["default", "__screenshot"] }
egui_code_editor = "0.2.12"
indexmap = "2.7.0"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
stacker = "0.1.19"
rfd = "0.15.2"
winnow = { version = "0.7.4", features = [
    #"unstable-doc", # build docs locally
    #"debug" # debug output/state of parser
] }
miette = { version = "7.5.0", features = ["fancy"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
lsp-server = "0.7.8"
lsp-types = "0.97.0"
serde_json = "1.0.140"
serde = { version = "1.0.218", features = ["derive"] }

# CLI
clap = { version = "4.5.34", features = ["cargo"] }
colored = "3.0.0"
# dialoguer = "0.11.0" # for dialogues
# indicatif = "0.17.11" # for progress bars